--- a/src/main/resources/regression/dl19-doc-docTTTTTquery.yaml
+++ b/src/main/resources/regression/dl19-doc-docTTTTTquery.yaml
@@ -13,27 +13,34 @@ index_stats:
   total terms: 3748333319
 
 metrics:
-  - metric: MAP
+  - metric: AP@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m map
+    params: -c -M 100 -m map # Note, this is different DL 2019 passage ranking!
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
-  - metric: R@100
-    command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recall.100
-    separator: "\t"
-    parse_index: 2
-    metric_precision: 4
-    can_combine: true
+    can_combine: false
   - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m ndcg_cut.10
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
+  - metric: R@100
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -m recall.100
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
+  - metric: R@1000
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -m recall.1000
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
 
 topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
@@ -47,41 +54,49 @@ topics:
 models:
   - name: bm25-default
     display: BM25 (default)
-    params: -bm25 -hits 100  # Note, this is different DL 2019 passage ranking!
+    params: -bm25
     results:
-      MAP:
+      AP@100:
         - 0.2700
       nDCG@10:
         - 0.5968
       R@100:
         - 0.4198
+      R@1000:
+        - 0.7190
   - name: bm25-default+rm3
     display: +RM3
-    params: -bm25 -rm3 -hits 100  # Note, this is different DL 2019 passage ranking!
+    params: -bm25 -rm3
     results:
-      MAP:
+      AP@100:
         - 0.3045
       nDCG@10:
         - 0.5897
       R@100:
         - 0.4465
+      R@1000:
+        - 0.7738
   - name: bm25-tuned
     display: BM25 (tuned)
-    params: -bm25 -bm25.k1 4.68 -bm25.b 0.87 -hits 100  # Note, this is different DL 2019 passage ranking!
+    params: -bm25 -bm25.k1 4.68 -bm25.b 0.87
     results:
-      MAP:
+      AP@100:
         - 0.2620
       nDCG@10:
         - 0.5972
       R@100:
         - 0.3992
+      R@1000:
+        - 0.6867
   - name: bm25-tuned+rm3
     display: +RM3
-    params: -bm25 -bm25.k1 4.68 -bm25.b 0.87 -rm3 -hits 100  # Note, this is different DL 2019 passage ranking!
+    params: -bm25 -bm25.k1 4.68 -bm25.b 0.87 -rm3
     results:
-      MAP:
+      AP@100:
         - 0.2814
       nDCG@10:
         - 0.6080
       R@100:
         - 0.4119
+      R@1000:
+        - 0.7177
