--- a/src/main/resources/regression/dl19-passage-unicoil.yaml
+++ b/src/main/resources/regression/dl19-passage-unicoil.yaml
@@ -13,16 +13,9 @@ index_stats:
   total terms: 44495093768
 
 metrics:
-  - metric: MAP
+  - metric: AP@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -m map -c -l 2
-    separator: "\t"
-    parse_index: 2
-    metric_precision: 4
-    can_combine: false
-  - metric: R@1000
-    command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -m recall.1000 -c -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -30,6 +23,20 @@ metrics:
   - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -m ndcg_cut.10 -c
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
+  - metric: R@100
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -m recall.100 -c -l 2
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
+  - metric: R@1000
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -m recall.1000 -c -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -49,9 +56,11 @@ models:
     display: uniCOIL w/ doc2query-T5 expansion
     params: -impact -pretokenized
     results:
-      MAP:
+      AP@1000:
         - 0.4612
       nDCG@10:
         - 0.7024
+      R@100:
+        - 0.6054
       R@1000:
         - 0.8292
