--- a/src/main/resources/regression/dl20-doc-segmented.yaml
+++ b/src/main/resources/regression/dl20-doc-segmented.yaml
@@ -13,34 +13,34 @@ index_stats:
   total terms: 3200515914
 
 metrics:
-  - metric: MAP
+  - metric: AP@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m map
+    params: -c -M 100 -m map # Note, this is different DL 2020 passage ranking!
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
   - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m ndcg_cut.10
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
-  - metric: MRR
-    command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recip_rank
-    separator: "\t"
-    parse_index: 2
-    metric_precision: 4
-    can_combine: true
+    can_combine: false
   - metric: R@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.100
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
+  - metric: R@1000
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -m recall.1000
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
 
 topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
@@ -54,97 +54,97 @@ topics:
 models:
   - name: bm25-default
     display: BM25 (default)
-    params: -bm25 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    params: -bm25 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      MAP:
+      AP@100:
         - 0.3586
       nDCG@10:
         - 0.5281
-      MRR:
-        - 0.8479
       R@100:
         - 0.5823
+      R@1000:
+        - 0.7755
   - name: bm25-default+rm3
     display: +RM3
-    params: -bm25 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    params: -bm25 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      MAP:
+      AP@100:
         - 0.3774
       nDCG@10:
         - 0.5179
-      MRR:
-        - 0.8136
       R@100:
         - 0.6224
+      R@1000:
+        - 0.8041
   - name: bm25-default+ax
     display: +Ax
-    params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      MAP:
+      AP@100:
         - 0.3868
       nDCG@10:
         - 0.5227
-      MRR:
-        - 0.8028
       R@100:
         - 0.6362
+      R@1000:
+        - 0.8301
   - name: bm25-default+prf
     display: +PRF
-    params: -bm25 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    params: -bm25 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      MAP:
+      AP@100:
         - 0.3686
       nDCG@10:
         - 0.5238
-      MRR:
-        - 0.7911
       R@100:
         - 0.6012
+      R@1000:
+        - 0.8032
   - name: bm25-tuned
     display: BM25 (tuned)
-    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      MAP:
+      AP@100:
         - 0.3458
       nDCG@10:
         - 0.5213
-      MRR:
-        - 0.8684
       R@100:
         - 0.5723
+      R@1000:
+        - 0.7725
   - name: bm25-tuned+rm3
     display: +RM3
-    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      MAP:
+      AP@100:
         - 0.3472
       nDCG@10:
         - 0.4979
-      MRR:
-        - 0.7807
       R@100:
         - 0.6025
+      R@1000:
+        - 0.8049
   - name: bm25-tuned+ax
     display: +Ax
-    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      MAP:
+      AP@100:
         - 0.3486
       nDCG@10:
         - 0.4948
-      MRR:
-        - 0.8019
       R@100:
         - 0.6114
+      R@1000:
+        - 0.8200
   - name: bm25-tuned+prf
     display: +PRF
-    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      MAP:
+      AP@100:
         - 0.3627
       nDCG@10:
         - 0.5251
-      MRR:
-        - 0.8478
       R@100:
         - 0.6048
+      R@1000:
+        - 0.8104
