--- a/src/main/resources/regression/dl20-doc.yaml
+++ b/src/main/resources/regression/dl20-doc.yaml
@@ -13,34 +13,34 @@ index_stats:
   total terms: 2742209690
 
 metrics:
-  - metric: MAP
+  - metric: AP@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m map
+    params: -c -M 100 -m map # Note, this is different DL 2020 passage ranking!
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
   - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m ndcg_cut.10
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
-  - metric: MRR
-    command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recip_rank
-    separator: "\t"
-    parse_index: 2
-    metric_precision: 4
-    can_combine: true
+    can_combine: false
   - metric: R@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.100
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
+  - metric: R@1000
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -m recall.1000
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
 
 topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
@@ -54,73 +54,73 @@ topics:
 models:
   - name: bm25-default
     display: BM25 (default)
-    params: -bm25 -hits 100  # Note, this is different DL 2020 passage ranking!
+    params: -bm25
     results:
-      MAP:
+      AP@100:
         - 0.3793
       nDCG@10:
         - 0.5286
-      MRR:
-        - 0.8521
       R@100:
         - 0.6110
+      R@1000:
+        - 0.8085
   - name: bm25-default+rm3
     display: +RM3
-    params: -bm25 -rm3 -hits 100  # Note, this is different DL 2020 passage ranking!
+    params: -bm25 -rm3
     results:
-      MAP:
+      AP@100:
         - 0.4014
       nDCG@10:
         - 0.5225
-      MRR:
-        - 0.8541
       R@100:
         - 0.6414
+      R@1000:
+        - 0.8257
   - name: bm25-tuned
     display: BM25 (tuned)
-    params: -bm25 -bm25.k1 3.44 -bm25.b 0.87 -hits 100  # Note, this is different DL 2020 passage ranking!
+    params: -bm25 -bm25.k1 3.44 -bm25.b 0.87
     results:
-      MAP:
+      AP@100:
         - 0.3631
       nDCG@10:
         - 0.5070
-      MRR:
-        - 0.8641
       R@100:
         - 0.5935
+      R@1000:
+        - 0.7876
   - name: bm25-tuned+rm3
     display: +RM3
-    params: -bm25 -bm25.k1 3.44 -bm25.b 0.87 -rm3 -hits 100  # Note, this is different DL 2020 passage ranking!
+    params: -bm25 -bm25.k1 3.44 -bm25.b 0.87 -rm3
     results:
-      MAP:
+      AP@100:
         - 0.3592
       nDCG@10:
         - 0.5124
-      MRR:
-        - 0.8186
       R@100:
         - 0.5977
+      R@1000:
+        - 0.8116
   - name: bm25-tuned2
     display: BM25 (tuned2)
-    params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -hits 100  # Note, this is different DL 2020 passage ranking!
+    params: -bm25 -bm25.k1 4.46 -bm25.b 0.82
     results:
-      MAP:
+      AP@100:
         - 0.3581
       nDCG@10:
         - 0.5061
-      MRR:
-        - 0.8522
       R@100:
         - 0.5860
+      R@1000:
+        - 0.7776
   - name: bm25-tuned2+rm3
     display: +RM3
-    params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -rm3 -hits 100  # Note, this is different DL 2020 passage ranking!
+    params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -rm3
     results:
-      MAP:
+      AP@100:
         - 0.3619
       nDCG@10:
         - 0.5238
-      MRR:
-        - 0.8582
       R@100:
         - 0.5995
+      R@1000:
+        - 0.8180
