--- a/src/main/resources/regression/dl20-passage-docTTTTTquery.yaml
+++ b/src/main/resources/regression/dl20-passage-docTTTTTquery.yaml
@@ -13,37 +13,30 @@ index_stats:
   total terms: 1986612263
 
 metrics:
-  - metric: MAP
+  - metric: AP@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m map -l 2
+    params: -m map -c -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
   - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m ndcg_cut.10
-    separator: "\t"
-    parse_index: 2
-    metric_precision: 4
-    can_combine: false
-  - metric: MRR
-    command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recip_rank -l 2
+    params: -m ndcg_cut.10 -c
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
   - metric: R@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recall.100 -l 2
+    params: -m recall.100 -c -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
   - metric: R@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recall.1000 -l 2
+    params: -m recall.1000 -c -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -63,12 +56,10 @@ models:
     display: BM25 (default)
     params: -bm25
     results:
-      MAP:
+      AP@1000:
         - 0.4074
       nDCG@10:
         - 0.6187
-      MRR:
-        - 0.7326
       R@100:
         - 0.7044
       R@1000:
@@ -77,12 +68,10 @@ models:
     display: +RM3
     params: -bm25 -rm3
     results:
-      MAP:
+      AP@1000:
         - 0.4295
       nDCG@10:
         - 0.6172
-      MRR:
-        - 0.7424
       R@100:
         - 0.7153
       R@1000:
@@ -91,12 +80,10 @@ models:
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68
     results:
-      MAP:
+      AP@1000:
         - 0.4082
       nDCG@10:
         - 0.6192
-      MRR:
-        - 0.7425
       R@100:
         - 0.7046
       R@1000:
@@ -105,12 +92,10 @@ models:
     display: +RM3
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rm3
     results:
-      MAP:
+      AP@1000:
         - 0.4296
       nDCG@10:
         - 0.6177
-      MRR:
-        - 0.7422
       R@100:
         - 0.7143
       R@1000:
@@ -119,12 +104,10 @@ models:
     display: BM25 (tuned2)
     params: -bm25 -bm25.k1 2.18 -bm25.b 0.86
     results:
-      MAP:
+      AP@1000:
         - 0.4171
       nDCG@10:
         - 0.6265
-      MRR:
-        - 0.7467
       R@100:
         - 0.7044
       R@1000:
@@ -133,12 +116,10 @@ models:
     display: +RM3
     params: -bm25 -bm25.k1 2.18 -bm25.b 0.86 -rm3
     results:
-      MAP:
+      AP@1000:
         - 0.4347
       nDCG@10:
         - 0.6232
-      MRR:
-        - 0.7327
       R@100:
         - 0.7109
       R@1000:
