--- a/src/main/resources/regression/dl20-passage.yaml
+++ b/src/main/resources/regression/dl20-passage.yaml
@@ -13,37 +13,30 @@ index_stats:
   total terms: 352316036
 
 metrics:
-  - metric: MAP
+  - metric: AP@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m map -l 2
+    params: -m map -c -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
   - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m ndcg_cut.10
-    separator: "\t"
-    parse_index: 2
-    metric_precision: 4
-    can_combine: false
-  - metric: MRR
-    command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recip_rank -l 2
+    params: -m ndcg_cut.10 -c
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
   - metric: R@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recall.100 -l 2
+    params: -m recall.100 -c -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
   - metric: R@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recall.1000 -l 2
+    params: -m recall.1000 -c -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -63,12 +56,10 @@ models:
     display: BM25 (default)
     params: -bm25
     results:
-      MAP:
+      AP@1000:
         - 0.2856
       nDCG@10:
         - 0.4796
-      MRR:
-        - 0.6585
       R@100:
         - 0.5599
       R@1000:
@@ -77,12 +68,10 @@ models:
     display: +RM3
     params: -bm25 -rm3
     results:
-      MAP:
+      AP@1000:
         - 0.3019
       nDCG@10:
         - 0.4821
-      MRR:
-        - 0.6360
       R@100:
         - 0.6046
       R@1000:
@@ -91,12 +80,10 @@ models:
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20
     results:
-      MAP:
+      AP@1000:
         - 0.3240
       nDCG@10:
         - 0.4834
-      MRR:
-        - 0.6096
       R@100:
         - 0.6428
       R@1000:
@@ -105,12 +92,10 @@ models:
     display: +PRF
     params: -bm25 -bm25prf
     results:
-      MAP:
+      AP@1000:
         - 0.3117
       nDCG@10:
         - 0.4721
-      MRR:
-        - 0.6157
       R@100:
         - 0.5783
       R@1000:
@@ -119,12 +104,10 @@ models:
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68
     results:
-      MAP:
+      AP@1000:
         - 0.2876
       nDCG@10:
         - 0.4876
-      MRR:
-        - 0.6594
       R@100:
         - 0.5669
       R@1000:
@@ -133,12 +116,10 @@ models:
     display: +RM3
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rm3
     results:
-      MAP:
+      AP@1000:
         - 0.3056
       nDCG@10:
         - 0.4808
-      MRR:
-        - 0.6278
       R@100:
         - 0.6333
       R@1000:
@@ -147,12 +128,10 @@ models:
     display: +Ax
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -axiom -axiom.deterministic -rerankCutoff 20
     results:
-      MAP:
+      AP@1000:
         - 0.3322
       nDCG@10:
         - 0.5027
-      MRR:
-        - 0.6328
       R@100:
         - 0.6468
       R@1000:
@@ -161,12 +140,10 @@ models:
     display: +PRF
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -bm25prf
     results:
-      MAP:
+      AP@1000:
         - 0.3136
       nDCG@10:
         - 0.4788
-      MRR:
-        - 0.6252
       R@100:
         - 0.5782
       R@1000:
